--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>Book's Store</title>
+</head>
+<body>
+    <header class="cabecalho">
+        <div class="container">
+            <span class="cabecalho_menu-hamburguer"></span>
+            <img src="./images/Logo.svg" alt="Alura Store Logo">
+        </div>
+        <div class="container">
+            <a href="#"><img src="./images/Favoritos.svg" alt="Favoritos"></a>
+            <a href="#"><img src="./images/Compras.svg" alt="Sacola de Compras"></a>
+            <a href="#"><img src="./images/Usuario.png" alt="Conta Usuário"></a>
         </div>
     </header>
 </body>
