--- a/index.html
+++ b/index.html
@@ -217,9 +217,11 @@
     </section>
 
     <section class="contato">
-        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, 
-        promoções e outros.</p>
+            <div class="contato__descricao">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, 
+            promoções e outros.</p>
+        </div>
         <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
 
@@ -227,6 +229,81 @@
 
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação</li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-8.svg" alt="Logo Casa do Código">
+                <a href="" class="lista-rodape__link">Casa do código</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-7.svg" alt="Logo Caelum">
+                <a href="" class="lista-rodape__link">Caelum</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação Online</li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9.svg" alt="Logo Alura">
+                <a href="" class="lista-rodape__link">Alura</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-1.svg" alt="Logo Alura para empresas">
+                <a href="" class="lista-rodape__link">Alura Para Empresas</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-2.svg" alt="Logo Alura Latam">
+                <a href="" class="lista-rodape__link">Alura LATAM</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-3.svg" alt="Logo Alura Start">
+                <a href="" class="lista-rodape__link">Alura Start</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-4.svg" alt="Logo MusicDot">
+                <a href="" class="lista-rodape__link">MusicDot</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-5.svg" alt="Logo Alura Língua">
+                <a href="" class="lista-rodape__link">Alura Língua</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-6.svg" alt="Logo PM3">
+                <a href="" class="lista-rodape__link">PM3</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-9.svg" alt="Logo Hipsters ponto Tech">
+                <a href="" class="lista-rodape__link">Hipsters ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-10.svg" alt="Logo Scuba Dev">
+                <a href="" class="lista-rodape__link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-11.svg" alt="Logo Layers ponto Tech">
+                <a href="" class="lista-rodape__link">Layers ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-12.svg" alt="Logo Like a Boss">
+                <a href="" class="lista-rodape__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-13.svg" alt="Logo Carreira sem Fronteira">
+                <a href="" class="lista-rodape__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-14.svg" alt="Logo Hipsters ponto Jobs">
+                <a href="" class="lista-rodape__link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./images/Ellipse 9-15.svg" alt="Logo GUJ">
+                <a href="" class="lista-rodape__link">GUJ</a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
