Form register included
Form register included with VIA CEP API... An API who offer promisses of user data.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <img src="images/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
                 <p class="container__texto">Minha Sacola</p>
             </a>
-            <a href="#" class="container__link">
+            <a href="./formulario.html" class="container__link">
                 <img src="images/Usuario.svg" alt="Meu perfil" class="container__imagem">
                 <p class="container__texto">Meu Perfil</p>
             </a>
